SERVER-12638 Sharding chunks ranges overlap

(cherry picked from commit bc26f73ef697c844cde8e4561bbf9a9c2f4728be)